# finance-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
telegram_bot/: handler.py  requirements-dev.txt
telegram_bot/bot/: commands.py  conversation.py  formatters.py  quick_add.py  scheduler.py  telegram_api.py
telegram_bot/config/: accounts.py  categories.py  merchants.py
telegram_bot/infra/: api_gateway.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  monitoring.tf  outputs.tf  scheduled.tf  terraform.tfvars.example  variables.tf
telegram_bot/infra/scripts/: deploy.sh  set_commands.sh  set_webhook.sh
telegram_bot/storage/: dynamodb.py  models.py
telegram_bot/tests/: conftest.py  test_budget.py  test_callback_idempotency.py  test_commands.py  test_dynamodb.py  test_edit_flow.py  test_export.py  test_handler_scheduled.py  test_merchants.py  test_portfolio.py  test_quick_add.py  test_recurring.py  test_scheduler.py  test_search.py  test_summary.py  test_transfer.py
